; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_capability.c___cap_rights_sysinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_capability.c___cap_rights_sysinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cap_rights_init_args = type { i32, i32, i32, i32, i32* }

@CAP_RIGHTS_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__cap_rights_sysinit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cap_rights_init_args*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.cap_rights_init_args*
  store %struct.cap_rights_init_args* %6, %struct.cap_rights_init_args** %3, align 8
  %7 = load %struct.cap_rights_init_args*, %struct.cap_rights_init_args** %3, align 8
  %8 = getelementptr inbounds %struct.cap_rights_init_args, %struct.cap_rights_init_args* %7, i32 0, i32 4
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %4, align 8
  %10 = load i32, i32* @CAP_RIGHTS_VERSION, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.cap_rights_init_args*, %struct.cap_rights_init_args** %3, align 8
  %13 = getelementptr inbounds %struct.cap_rights_init_args, %struct.cap_rights_init_args* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.cap_rights_init_args*, %struct.cap_rights_init_args** %3, align 8
  %16 = getelementptr inbounds %struct.cap_rights_init_args, %struct.cap_rights_init_args* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.cap_rights_init_args*, %struct.cap_rights_init_args** %3, align 8
  %19 = getelementptr inbounds %struct.cap_rights_init_args, %struct.cap_rights_init_args* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.cap_rights_init_args*, %struct.cap_rights_init_args** %3, align 8
  %22 = getelementptr inbounds %struct.cap_rights_init_args, %struct.cap_rights_init_args* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @__cap_rights_init(i32 %10, i32* %11, i32 %14, i32 %17, i32 %20, i32 %23, i64 0)
  ret void
}

declare dso_local i32 @__cap_rights_init(i32, i32*, i32, i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
